[gd_scene load_steps=14 format=2]

[ext_resource path="res://SceneController.gd" type="Script" id=1]
[ext_resource path="res://meshes/SwordScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://meshes/bat_joined.obj" type="ArrayMesh" id=3]
[ext_resource path="res://meshes/guitar/guitar_strandberg.glb" type="PackedScene" id=4]
[ext_resource path="res://sounds/stayRetro.mp3" type="AudioStream" id=5]
[ext_resource path="res://videos/Copy-of-ArcanepadLandingPageVideo-Made-with-Clipchamp.ogv" type="VideoStream" id=6]
[ext_resource path="res://meshes/gun/scene.gltf" type="PackedScene" id=7]

[sub_resource type="ImageTexture" id=5]

[sub_resource type="PanoramaSky" id=6]
panorama = SubResource( 5 )

[sub_resource type="Environment" id=1]
background_mode = 1
background_sky = SubResource( 6 )
background_color = Color( 0.666667, 0.72549, 0.709804, 1 )
ambient_light_color = Color( 0.105882, 0.0196078, 0.584314, 1 )

[sub_resource type="SpatialMaterial" id=7]

[sub_resource type="CubeMesh" id=3]
size = Vector3( 0.5, 1, 0.05 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0, 1, 1, 1 )

[node name="Spatial" type="Spatial"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )
script = ExtResource( 1 )

[node name="CSGMesh" type="CSGMesh" parent="WorldEnvironment"]

[node name="gun" parent="WorldEnvironment/CSGMesh" instance=ExtResource( 7 )]
transform = Transform( -1.31134e-07, -3, 0, 3, -1.31134e-07, 0, 0, 0, 3, 0, 0, 0 )
visible = false

[node name="bat_joined" type="MeshInstance" parent="WorldEnvironment/CSGMesh"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0.0161464, 0, -0.0144062 )
visible = false
mesh = ExtResource( 3 )
material/0 = SubResource( 7 )

[node name="sword" parent="WorldEnvironment/CSGMesh" instance=ExtResource( 2 )]
transform = Transform( 0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, 0, 0 )
visible = false

[node name="guitar" parent="WorldEnvironment/CSGMesh" instance=ExtResource( 4 )]
transform = Transform( 1.91069e-17, 4.37114e-10, 0.01, 0.01, -4.37114e-10, 0, 4.37114e-10, 0.01, -4.37114e-10, 0, 0, 0 )
visible = false

[node name="Phone" type="CSGMesh" parent="WorldEnvironment/CSGMesh"]
mesh = SubResource( 3 )
material = SubResource( 4 )

[node name="VideoPlayer" type="VideoPlayer" parent="WorldEnvironment"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 6 )
volume_db = 24.0

[node name="Camera" type="Camera" parent="WorldEnvironment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000614643, -0.0107503, 3.80855 )

[node name="AudioPlayer" type="AudioStreamPlayer" parent="WorldEnvironment"]

[node name="BgMusic" type="AudioStreamPlayer" parent="WorldEnvironment"]
stream = ExtResource( 5 )
autoplay = true

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.560191, 0.828364, 0, -0.828364, 0.560191, 0, 6.18692, 1.70037 )

[node name="DirectionalLight2" type="DirectionalLight" parent="."]
transform = Transform( 0.99467, -0.00520793, 0.102977, 0.0904567, 0.523414, -0.847264, -0.0494871, 0.852063, 0.521095, 0, -5.97576, 1.70037 )
light_color = Color( 0.662745, 0, 1, 1 )
